# Bifrost

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Bifrost.hpp
test/: test.cpp
